ui/webui/resources/wasm/vendor/zerocopy/tests/ui-nightly/transmute-size-increase.stderr
error[E0080]: transmuting from 1-byte type to 2-byte type: `u8` -> `AU16`
  --> tests/ui-nightly/transmute-size-increase.rs:20:29
   |
20 | const INCREASE_SIZE: AU16 = transmute!(0u8);
   |                             ^^^^^^^^^^^^^^^ evaluation of `INCREASE_SIZE` failed here
   |
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> tests/ui-nightly/transmute-size-increase.rs:20:29
   |
20 | const INCREASE_SIZE: AU16 = transmute!(0u8);
   |                             ^^^^^^^^^^^^^^^
   |
   = note: source type: `u8` (8 bits)
   = note: target type: `AU16` (16 bits)
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)
